finalizando card e footer da página de receitas, aplicando conceito de static files

--- a/base_templates/global/pages/home.html
+++ b/base_templates/global/pages/home.html
@@ -6,8 +6,9 @@
 
     <main class="main.main-content-container">
         <div class="main-content main-content-list container">
-
+            {% include 'global/partials/recipes.html' %}
         </div>
     </main>
+    {% include 'global/partials/footer.html' %}
 </body>
 </html>
