--- a/base_templates/global/pages/recipe-view.html
+++ b/base_templates/global/pages/recipe-view.html
@@ -5,7 +5,7 @@
     {% include 'global/partials/search.html' %}
 
     <main class="main.main-content-container">
-        <div class="main-content main-content-list container">
+        <div class="main-content main-content-detail container">
             {% include 'global/partials/recipes.html' %}
         </div>
     </main>
