Corrigindo centralização do recipe de detail e melhorando o código

--- a/base_templates/global/pages/recipe-view.html
+++ b/base_templates/global/pages/recipe-view.html
@@ -6,7 +6,7 @@
 
     <main class="main.main-content-container">
         <div class="main-content main-content-detail container">
-            {% include 'global/partials/recipes.html' %}
+            {% include 'global/partials/recipes-view-detail.html' %}
         </div>
     </main>
     {% include 'global/partials/footer.html' %}
