Uso de BLOCK para simplificar o código

--- a/base_templates/global/pages/home.html
+++ b/base_templates/global/pages/home.html
@@ -1,19 +1,11 @@
-{% include 'global/partials/head.html' %}
-
-<body>
-    {% include 'global/partials/header.html' %}
-    {% include 'global/partials/search.html' %}
-
-    <main class="main.main-content-container">
-        <div class="main-content main-content-list container">
+{% extends 'global/pages/base.html' %}
+{% block content %}
+<div class="main-content main-content-list container">
             {% include 'global/partials/recipes.html' %}
             {% include 'global/partials/recipes.html' %}
             {% include 'global/partials/recipes.html' %}
             {% include 'global/partials/recipes.html' %}
             {% include 'global/partials/recipes.html' %}
             {% include 'global/partials/recipes.html' %}
-        </div>
-    </main>
-    {% include 'global/partials/footer.html' %}
-</body>
-</html>
+</div>
+{% endblock %}
