--- a/base_templates/global/pages/recipe-view.html
+++ b/base_templates/global/pages/recipe-view.html
@@ -1,14 +1,6 @@
-{% include 'global/partials/head.html' %}
-
-<body>
-    {% include 'global/partials/header.html' %}
-    {% include 'global/partials/search.html' %}
-
-    <main class="main.main-content-container">
-        <div class="main-content main-content-detail container">
+{% extends 'global/pages/base.html' %}
+{% block content %}
+<div class="main-content main-content-detail container">
             {% include 'global/partials/recipes-view-detail.html' %}
-        </div>
-    </main>
-    {% include 'global/partials/footer.html' %}
-</body>
-</html>
+</div>
+{% endblock %}
