Melhoria na apresentação do recipe e no código

--- a/base_templates/global/pages/base.html
+++ b/base_templates/global/pages/base.html
@@ -1,4 +1,11 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+    <head>
 {% include 'global/partials/head.html' %}
+    <title>{% block title %}{% endblock %} Recipe</title>
+
+</head>
 
 <body>
     {% include 'global/partials/header.html' %}
