--- a/base_templates/global/pages/recipe-view.html
+++ b/base_templates/global/pages/recipe-view.html
@@ -1,4 +1,6 @@
 {% extends 'global/pages/base.html' %}
+{% block title %}More Informations | {% endblock %}
+
 {% block content %}
 <div class="main-content main-content-detail container">
             {% include 'global/partials/recipes-view-detail.html' %}
