--- a/base_templates/global/pages/home.html
+++ b/base_templates/global/pages/home.html
@@ -1,11 +1,10 @@
 {% extends 'global/pages/base.html' %}
+{% block title %}Home | {% endblock %}
+
 {% block content %}
 <div class="main-content main-content-list container">
+        {% for recipe in recipes %}
             {% include 'global/partials/recipes.html' %}
-            {% include 'global/partials/recipes.html' %}
-            {% include 'global/partials/recipes.html' %}
-            {% include 'global/partials/recipes.html' %}
-            {% include 'global/partials/recipes.html' %}
-            {% include 'global/partials/recipes.html' %}
+        {% endfor %}    
 </div>
 {% endblock %}
